.kubernetes/hyvesdp-eks/staging/1_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hm-staging-masterstream-storybook
  namespace: hm-staging-masterstream
  labels:
    app: "hm-staging-masterstream-storybook"
    pipeline_id: "$CI_PIPELINE_ID"
spec:
  selector:
    app: hm-staging-masterstream-storybook
  ports:
    - port: 80
      targetPort: 6006
      protocol: TCP
