.kubernetes/hyvesdp-eks/staging/2_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-staging-masterstream-storybook
  namespace: hm-staging-masterstream
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    app.gitlab.com/app: $CI_PROJECT_PATH_SLUG
    app.gitlab.com/env: staging
  labels:
    app: "hm-staging-masterstream-storybook"
    pipeline_id: "$CI_PIPELINE_ID"
spec:
  ingressClassName: nginx-pvt
  tls:
    - hosts:
        - staging.storybook.masterstream.co.za
      secretName: hyvesdp-tls
  rules:
    - host: staging.storybook.masterstream.co.za
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hm-staging-masterstream-storybook
                port:
                  number: 80
